test/spec_vectors/return_call_indirect/fail/module_15.wat
(module (type (func (param i32))) (table 0 funcref) (func $arity-0-vs-1 (return_call_indirect (type 0) (i32.const 0))))